1. auto create math problem 2. answer and check 3. find solution to save but not done yet

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "webpack-dev-server",
+    "test": "webpack-dev-server --port 9999",
     "build": "webpack"
   },
   "dependencies": {
