--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Math",
-  "version": "1.0.0",
+  "version": "0.24.6",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "3",
     "jquery": "^3.2.1",
+    "keypress": "^0.2.1",
     "material-ui": "^0.18.0",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
